[package]
name = "cabin"
version = "1.0.0"
edition = "2021"

[dependencies]
ansi-diff = "1.0.0"
async-std = "1.10.0"
cable = { path = "../cable.rs/cable" }
# TODO: Use git path once high-activity dev cycle is complete.
cable_core = { path = "../cable.rs/cable_core" }
argmap = "1.1.1"
term_size = "0.3.2"
signal-hook = { version = "0.3.13", features = [ "iterator", "extended-siginfo" ] }
time-format = "1.1.2"
futures = "0.3.13"
indoc = "1.0.3"
raw_tty = "0.1.0"
terminal-keycode = "1.0.0"
