[package]
name = "cabin"
version = "1.0.0"
edition = "2021"

[dependencies]
ansi-diff = "1.0.0"
argmap = "1.1.1"
async-std = "1.10.0"
cable = { path = "../cable.rs/cable" }
# TODO: Use git path once high-activity dev cycle is complete.
cable_core = { path = "../cable.rs/cable_core" }
env_logger = "0.9.0"
futures = "0.3.13"
indoc = "1.0.3"
log = "0.4.0"
raw_tty = "0.1.0"
signal-hook = { version = "0.3.13", features = [ "iterator", "extended-siginfo" ] }
term_size = "0.3.2"
terminal-keycode = "1.0.0"
time-format = "1.1.2"
